[fix, nav, es, OS] Make nav collapse appear earlier (997px?) for Spanish; Decided to change font-size to 73% in order to not mess with Bootstrap default configurations for responsive navigation bars.

--- a/styles/online_sponsoring/style.css
+++ b/styles/online_sponsoring/style.css
@@ -1233,6 +1233,9 @@ body.incheckout {
   #freedom_flexibility_section .subcontainer .row {
     margin: 0em;
   }
+  body.es #pagenav #navbar-sections ul.join_nav {
+    font-size: 62.5%;
+  }
 }
 
 /* Medium screens like laptops and smaller desktop monitors */
